@@ -1,6 +1,9 @@
 devel
 -----
 
+* Add progress reporting to RocksDB WAL recovery, in case there are many WAL
+  files to recover.
+
 * Updated ArangoDB Starter to 0.15.5-preview-2.
 
 * Fixed BTS-918 (incorrectly navigating back 1 level in history when a modal-dialog element is present).
